--- a/SRC/app/build.gradle
+++ b/SRC/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
 
@@ -24,6 +23,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding { enabled = true }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -35,10 +36,11 @@ android {
 
 dependencies {
 
-    def androidx_version = '1.3.1'
-    def retrofit_version = '2.7.2'
+    def androidx_version = '1.4.0'
+    def retrofit_version = '2.9.0'
     def dagger_version = '2.28.3'
-    def room_version = "2.3.0"
+    def room_version = "2.4.2"
+    def coroutines_version = "1.6.0"
     def first_stable_version = '1.0.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -54,15 +56,12 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-
-    // optional - RxJava support for Room
-    implementation "androidx.room:room-rxjava2:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
     // Android Lifecycle Extensions
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.activity:activity-ktx:$androidx_version"
+    implementation 'androidx.fragment:fragment-ktx:1.5.0-alpha03'
 
     // Glide for Images
     implementation 'com.github.bumptech.glide:glide:4.13.0'
@@ -80,5 +79,12 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
+
+    // optional - Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
